# attestation-service

./: Cargo.toml  README.md
.github/workflows/: attest-in-tee.yml  ci.yml  release.yml
deploy/: attested-workload.md
docs/: index.html
docs/status/: s2s.json
scripts/: demo.sh  verify-source-to-silicon.sh
src/: lib.rs  main.rs  receipt.rs
src/service/: attest.rs  build.rs  http.rs  mod.rs  quote_source.rs  state.rs  verify.rs
src/stackcore/: eat.rs  kds.rs  mod.rs  value_x.rs
src/stackcore/quote/: mod.rs  roots.rs  verify.rs
tests/: verify_fixtures.rs
